fixed height of 100px for images on mobile. [closes #166]

--- a/less/app-mr-president.less
+++ b/less/app-mr-president.less
@@ -178,8 +178,8 @@
                     &:hover {
                             -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
                             -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
-            box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
-            opacity: .7;
+                            box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
+                            opacity: .7;
                     }
             }
             a:first-child img { margin-left: 0; }
@@ -202,6 +202,11 @@
         width: 100%;
         overflow-x: scroll;
         overflow-y: hidden;
+      }
+
+      img {
+        height: 100px;
+        width: auto;
       }
     }
 
